[project]
name = "IBL"
version = "0.1.0"
description = "Jupyter: simple checkbox + progress UI with hard-coded steps"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["ipywidgets>=8.1.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["IBL*"]
