[project]
name = "ibl-utils"
version = "0.1.0"
description = "Jupyter: checkbox + progress UI (hard-coded steps)"
requires-python = ">=3.9"
dependencies = ["ipywidgets>=8.1.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["utils"]  # ← ここが超重要。utils パッケージを配布対象にする
